# FastApiLearn

./: LICENSE  README.md  async_await_overview.py  async_await_sponge_bob.py  main.py  pyproject.toml
project1/: converter.py  main.py  routers.py  schemas.py
project2/: Dockerfile  docker-compose.yml  pyproject.toml
project2/app/: main.py
project2/app/db/: connection.py  models.py
project2/app/migrations/: env.py
project2/app/migrations/versions/: 067f01e4ae36_add_users.py  7e13cb29f2a8_add_categories_table.py  aae95b565e49_add_products_table.py
project2/app/routes/: category_routes.py  deps.py  product_routes.py  user_routes.py
project2/app/schemas/: base.py  category.py  product.py  user.py
project2/app/test/: conftest.py
project2/app/test/routes/: test_category_routes.py  test_product_routes.py  test_user_routes.py
project2/app/test/schemas/: test_category_schema.py  test_product_schema.py  test_user_schema.py
project2/app/test/user_cases/: test_category_use_cases.py  test_product_use_cases.py  test_user_use_cases.py
project2/app/use_cases/: category.py  product.py  user.py
