[tool.poetry]
name = "project2"
version = "0.1.0"
description = ""
authors = ["Vitor Calado <vitor.santos.calado@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
pytest = "^8.2.1"
alembic = "^1.13.1"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
